--- a/themes/helsec/static/assets/css/hugo-easy-gallery.css
+++ b/themes/helsec/static/assets/css/hugo-easy-gallery.css
@@ -10,7 +10,7 @@ Grid Layout Styles
 .gallery {
     overflow: hidden;
     margin: 10px;
-    max-width: 868px;
+    max-width: 876x;
 }
 .gallery .box {
     float: left;
