Added couple hair space chars, because hugo minify breaks something

--- a/themes/helsec/layouts/partials/banner.html
+++ b/themes/helsec/layouts/partials/banner.html
@@ -12,11 +12,11 @@
             <header>
                 <img class="hero-logo" src="{{ .Site.BaseURL }}/assets/images/helsec_logo_white.svg" height=100px/>
             </header>
-            <p>Cybersecurity group
+            <p>Cybersecurity group 
             <br />
-            by the <strong>community</strong>,
+            &hairsp;by the <strong>community</strong>,
             <br />
-            for the <strong>community</strong>.</p>
+            &hairsp;for the <strong>community</strong>.</p>
             <footer>
                 <ul class="buttons stacked">
                     <li><a href="#main" class="button fit scrolly">WTF?</a></li>
