Defaulting all the apply links to english versions

--- a/themes/helsec/layouts/index.html
+++ b/themes/helsec/layouts/index.html
@@ -54,7 +54,7 @@
                             <p>HelSec is a registered association and welcomes membership applications. With a membership you receive the right to vote in our regular meetings, a helsec.fi email address, a challenge coin, a privilege to order HelSec swag, and an opportunity to sign up to our meetups and workshops 24 hours before others.</p>
                             <footer>
                                 <ul class="buttons">
-                                    <li><a href="https://byte.flomembers.com/helsec/members/application" target="_blank" class="button">Apply for membership</a></li>
+                                    <li><a href="https://byte.flomembers.com/helsec/members/application?_lang=en" target="_blank" class="button">Apply for membership</a></li>
                                 </ul>
                             </footer>
 
