--- a/themes/helsec/layouts/partials/header.html
+++ b/themes/helsec/layouts/partials/header.html
@@ -24,6 +24,6 @@
                 {{- end }}
             </ul>
         </li>
-        <li><a href="https://byte.flomembers.com/helsec/members/application" class="button primary">Join us</a></li>
+        <li><a href="https://byte.flomembers.com/helsec/members/application?_lang=en" class="button primary">Join us</a></li>
     </ul>
 </nav>
