Changed button text

--- a/themes/helsec/layouts/events/single.html
+++ b/themes/helsec/layouts/events/single.html
@@ -24,7 +24,7 @@
         
         {{ if .Params.Link }}
             <ul class="buttons">
-                <li><a href="{{ .Params.Link }}" target="_blank" class="button"><i class="fab fa-meetup"></i> Meetup.com</a></li>
+                <li><a href="{{ .Params.Link }}" target="_blank" class="button"><i class="fab fa-meetup"></i> Sign up</a></li>
             </ul>
         {{ end }}
         {{ if .Params.Stream }}
